--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
   
   
   <h2 style="font-size: 2rem;"><strong>Fitzpatrick Skin Type Detection</strong></h2>
+  <h3>Please ensure you are in proper lighting and that your entire face is fully visible to the camera.</h3>
 
   <div id="container">
+  <div id="videoWrapper">
     <div id="overlayBox"></div>
     <video id="video" autoplay muted playsinline></video>
-    <canvas id="canvas" width="360" height="270" style="display:none;"></canvas>
   </div>
+  <canvas id="canvas" width="360" height="270" style="display:none;"></canvas>
+</div>
 
  
 <div id="buttonContainer">
