--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
   <div class="result" id="result">Align your face inside the box, then tap Capture.</div>
   <div id="quiz"></div>
 
+  <!-- Loading spinner container -->
+<div id="loadingMessage" style="display:none;">
+  <div class="spinner"></div>
+  <p class="loading-text">⏳ Please wait a few seconds while we analyze your skin and prepare your results...</p>
+</div> 
+
+
+
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_mesh/face_mesh.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
   <script src="script.jsx"></script>
